adds view-controls ui for zooming

--- a/index.html
+++ b/index.html
@@ -73,12 +73,18 @@
 	</div>
 	<button type="button" class="btn btn-default separator"></button>
 	<div id="pivotTools">
-		<button type="button" class="btn btn-default glyphicon glyphicon-screenshot"  id="pivot_local_select" 	data-event="activateLocalPivotMode"></button>
-		<button type="button" class="btn btn-default glyphicon glyphicon-th-large"  id="pivot_selection_select" data-event="activateSelectionPivotMode"></button>
+		<button type="button" class="btn btn-default glyphicon glyphicon-screenshot"  	id="pivot_local_select" 	data-event="activateLocalPivotMode"></button>
+		<button type="button" class="btn btn-default glyphicon glyphicon-th-large"  	id="pivot_selection_select" data-event="activateSelectionPivotMode"></button>
+	</div>
+	<button type="button" class="btn btn-default separator"></button>
+	<div id="viewControls">
+		<button type="button" class="btn btn-default glyphicon glyphicon-zoom-in"         id="zoom_in" 	  	data-event="zoomIn"></button>
+		<button type="button" class="btn btn-default glyphicon glyphicon-zoom-out"        id="zoom_out"   	data-event="zoomOut"></button>
+		<button type="button" class="btn btn-default glyphicon glyphicon-resize-small"    id="reset_view"   data-event="resetView"></button>
 	</div>
 </div>
 
-<div id="controls">
+<div id="gameplayControls">
 	<button type="button" class="btn btn-default btn-lg glyphicon glyphicon-play"  			id="enter_gameview" 	data-event=""></button>
 	<button type="button" class="btn btn-default btn-lg glyphicon glyphicon-pause"  		id="pause_gameview"    data-event=""></button>
 	<button type="button" class="btn btn-default btn-lg glyphicon glyphicon-step-forward"  	id="skip_frame_gameview"    data-event=""></button>
