adds world loader for box2d-web

--- a/index.html
+++ b/index.html
@@ -423,6 +423,7 @@
 <script type="text/javascript" src="js/SceneManager.js"></script>
 <script type="text/javascript" src="js/Viewport.js"></script>
 <script type="text/javascript" src="js/UIManager.js"></script>
+<script type="text/javascript" src="resources/loaders/Box2dWeb/WorldLoader.js"></script>
 <script type="text/javascript" src="js/GameView.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
 
