--- a/index.html
+++ b/index.html
@@ -425,6 +425,7 @@
 <script type="text/javascript" src="js/UIManager.js"></script>
 <script type="text/javascript" src="resources/loaders/Box2dWeb/WorldLoader.js"></script>
 <script type="text/javascript" src="js/GameView.js"></script>
+<script type="text/javascript" src="js/PhysicsEditor.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
 
 </body>
