--- a/index.html
+++ b/index.html
@@ -414,6 +414,19 @@
 	</div>
 </div>
 
+<div class="panel panel-default" id="alert_dialog">
+  <div class="panel-heading">Ceate new scene</div>
+  	<div class="panel-body">
+    	Are you sure?
+  	</div>
+  	<div class="btn-group btn-group-justified" role="group" aria-label="...">
+ 		<button type="button" class="btn btn-default ">yes</button>
+	 	<button type="button" class="btn btn-default hidden"></button>
+	 	<button type="button" class="btn btn-default ">no</button>
+	</div>
+</div>
+
+
 <!-- js-scripts -->
 <script type="text/javascript" src="js/jquery.js"></script>
 <script type="text/javascript" src="js/bootstrap.min.js"></script>
