fixes texture loading bugs in scene loader

--- a/editor.html
+++ b/editor.html
@@ -33,8 +33,8 @@
 	    	Edit
 	  	</button>
 	    <ul class="dropdown-menu" aria-labelledby="editMenuDropdown" id="editMenu">
-			<li><a href="#" data-event="">Undo</a></li>
-			<li><a href="#" data-event="">Redo</a></li>
+			<!-- <li><a href="#" data-event="">Undo</a></li>
+			<li><a href="#" data-event="">Redo</a></li> -->
 			<li><a href="#" data-event="deleteSelectedObjects">Delete Selection</a></li>
 		</ul>
 	</div>
@@ -449,6 +449,7 @@
 <script type="text/javascript" src="js/SceneManager.js"></script>
 <script type="text/javascript" src="js/Viewport.js"></script>
 <script type="text/javascript" src="js/UIManager.js"></script>
+<!-- <script type="text/javascript" src="js/SceneHistory.js"></script> -->
 <script type="text/javascript" src="resources/loaders/Box2dWeb/WorldLoader.js"></script>
 <script type="text/javascript" src="js/GameView.js"></script>
 <script type="text/javascript" src="js/PhysicsEditor.js"></script>
