adds maskBits, categodrBits and groupIndex to fixture for collision filtering

--- a/editor.html
+++ b/editor.html
@@ -147,6 +147,35 @@
 
 			<tr>
 				<td>
+					<p>Mask Bits</p>
+				</td>
+				<td>
+					<p><input type="text" maxlength="16" data-property="maskBits"></p>
+				</td>
+			</tr>
+
+
+			<tr>
+				<td>
+					<p>Category Bits</p>
+				</td>
+				<td>
+					<p><input type="text" maxlength="16" data-property="categoryBits"></p>
+				</td>
+			</tr>
+
+
+			<tr>
+				<td>
+					<p>Group Index</p>
+				</td>
+				<td>
+					<p><input type="text" maxlength="5" data-property="groupIndex"></p>
+				</td>
+			</tr>
+
+			<tr>
+				<td>
 					<p>isSensor</p>
 				</td>
 				<td>
