bug fixes in scene loader
adds linear and angular damping parameters to body

--- a/editor.html
+++ b/editor.html
@@ -7,7 +7,6 @@
 <title>Physics-Editor</title>
 <link rel="icon" type="image/png" href="resources/title_icon.png">
 <link rel="stylesheet" type="text/css" href="css/reset.css">
-<link rel="stylesheet" type="text/css" href="css/hint.css">
 <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
@@ -134,7 +133,7 @@
 					<p>Density</p>
 				</td>
 				<td>
-					<p><input type="text" maxlength="5" data-property="density"></p>
+					<p><input type="text" maxlength="10" data-property="density"></p>
 				</td>
 			</tr>
 
@@ -143,7 +142,7 @@
 					<p>Friction</p>
 				</td>
 				<td>
-					<p><input type="text" maxlength="5" data-property="friction"></p>
+					<p><input type="text" maxlength="10" data-property="friction"></p>
 				</td>
 			</tr>
 
@@ -152,7 +151,7 @@
 					<p>Restitution</p>
 				</td>
 				<td>
-					<p><input type="text" maxlength="5" data-property="restitution"></p>
+					<p><input type="text" maxlength="10" data-property="restitution"></p>
 				</td>
 			</tr>
 
@@ -181,7 +180,7 @@
 					<p>Group Index</p>
 				</td>
 				<td>
-					<p><input type="text" maxlength="5" data-property="groupIndex"></p>
+					<p><input type="text" maxlength="16" data-property="groupIndex"></p>
 				</td>
 			</tr>
 
@@ -257,6 +256,24 @@
 				</td>
 				<td>
 					<p><input type="checkbox" data-property="isFixedRotation"></p>
+				</td>
+			</tr>
+
+			<tr>
+				<td>
+					<p>Linear Damping</p>
+				</td>
+				<td>
+					<p><input type="text" maxlength="10" data-property="linearDamping"></p>
+				</td>
+			</tr>
+
+			<tr>
+				<td>
+					<p>Angular Damping</p>
+				</td>
+				<td>
+					<p><input type="text" maxlength="10" data-property="angularDamping"></p>
 				</td>
 			</tr>
 
