--- a/editor.html
+++ b/editor.html
@@ -73,6 +73,7 @@
 			<li><a href="#" data-type="2">Revolute Joint</a></li>
 			<li><a href="#" data-type="3">Wheel Joint</a></li>
 			<li><a href="#" data-type="4">Pulley Joint</a></li>
+			<li><a href="#" data-type="5">Gear Joint</a></li>
 		</ul>
 	</div>
 </nav>
