--- a/editor.html
+++ b/editor.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 
+<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+<meta content="utf-8" http-equiv="encoding">
 <meta name="viewport" content="initial-scale=1, maximum-scale=1">
 
 <title>Physics-Editor</title>
