--- a/editor.html
+++ b/editor.html
@@ -76,6 +76,7 @@
 			<li><a href="#" data-type="3">Wheel Joint</a></li>
 			<li><a href="#" data-type="4">Pulley Joint</a></li>
 			<li><a href="#" data-type="5">Gear Joint</a></li>
+			<li><a href="#" data-type="6">Prismatic Joint</a></li>
 		</ul>
 	</div>
 </nav>
