updates ui to edit prismatic joints

--- a/editor.html
+++ b/editor.html
@@ -427,7 +427,7 @@
 
 			<tr>
 				<td>
-					<p>Max Motor Speed</p>
+					<p>Motor Speed</p>
 				</td>
 				<td>
 					<p><input type="text" data-property="motorSpeed"></p>
