--- a/editor.html
+++ b/editor.html
@@ -77,6 +77,7 @@
 			<li><a href="#" data-type="4">Pulley Joint</a></li>
 			<li><a href="#" data-type="5">Gear Joint</a></li>
 			<li><a href="#" data-type="6">Prismatic Joint</a></li>
+			<li><a href="#" data-type="7">Rope Joint</a></li>
 		</ul>
 	</div>
 </nav>
